fix: Fix IE11 float overflow

--- a/elements/pfe-band/src/pfe-band.scss
+++ b/elements/pfe-band/src/pfe-band.scss
@@ -366,7 +366,7 @@ $regions-grid: (
     float: right;
     
     width: 35%;
-    margin: 0 2.5%;
+    margin: 0 1.9%;
       
     :host([aside-desktop="left"]) & {
       float: left;
